# msgpu_ramdac_fpga

./: .gitignore  CMakeLists.txt  Makefile  build.tcl  msgpu.gprj  packages.json
boards/elbert_v2/: CMakeLists.txt  build.tcl  elbertconfig.py  elbertv2.ucf  flash_elbert.py  pll.v  pll_arwz.ucf  top.v
boards/tangnano/: CMakeLists.txt  build.tcl  psram.sv  psram.v  tangnano.cst  top.v
boards/tangnano/pll/: pll.ipc  pll.mod
boards/tangnano/psram/: commands.v  globals.v  read.v  read_eid.v  spi.sv  spi_interface.sv  spi_types.sv  write.v
docs/: arch.org  psram_driver.plantuml
sim/: CMakeLists.txt  color.cpp  color.hpp  image_loader.cpp  main.cpp  mcu_interface.cpp  mcu_interface.hpp  msgpu_simulation.cpp  msgpu_simulation.hpp  vga_interface.cpp  vga_interface.hpp  window.cpp  window.hpp
src/: 640_480_60_timings.v  clock_divider.sv  clock_divider.v  commands.v  dual_port_ram.v  fifo.sv  fifo.v  gated_clock.v  mcu_bus.sv  mcu_bus.v  mcu_bus_interface.sv  memory_interface.sv  message_broker.v  msgpu.cst  msgpu.sv  msgpu.v  msgpu_nano.v  msgpu_new.v  pixel_memory.v  psram.v  psram_frame_buffer.v  vga.v  vga_commands.v  vga_fifo_sync.v  vga_screen.v  vga_sync.v
src/osc/: osc.ipc  osc.mod  osc.v  osc_tmp.v
src/pll/: pll.v  pll_tmp.v
tests/: CMakeLists.txt  clock_divider_tests.cpp  fifo_tb.sv  fifo_tests.cpp  gated_clock_tests.cpp  mcu_bus_tests.cpp  msgpu_tests.cpp  psram_tests.cpp
tests/gated_clock/: CMakeLists.txt
tests/psram/: CMakeLists.txt  psram_tests.cpp
